Creating cene change

--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -18,8 +18,13 @@
 
         <p>Quiz - iRock</p>
     </header>
+    <div id="placar">
+        <h1 style="color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"></h1>    </div>
 
     <div id="main">
+        <p>
+            <h1 id="clique" style="text-align: center; color: white; display: ;" >Para começar clique em mim!</h1>
+        </p>
         <img id="iRock" alt="Irock imagem" style="cursor:pointer" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" , onclick="touchRock();" , />
     </div>
     <br>
@@ -41,15 +46,15 @@
 
             <tr>
                 <td>
-                    <img id="mat" style="margin-left: 2cm; margin-right: 2cm;" " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\questao.png " onclick="selacaoMateria(); matematica(); ">
+                    <img id="mat" style="margin-left: 2cm; margin-right: 2cm;" " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria(); matematica(); ">
                      <br>Matematica</td>
-                <td><img id="pt " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\questao.png "onclick="selacaoMateria(); "><br>Portugues</td>
+                <td><img id="pt " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png"onclick="selacaoMateria(); "><br>Portugues</td>
                
             </tr>
 
             <tr> <td>
-                    <img id="geo " style="margin-left: 2cm; margin-right: 2cm; " " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\questao.png " onclick="selacaoMateria();"> <br>Geografia</td>
-                <td><img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\questao.png " onclick="selacaoMateria();"><br>Ciência</td>
+                    <img id="geo " style="margin-left: 2cm; margin-right: 2cm; " " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();"> <br>Geografia</td>
+                <td><img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();"><br>Ciência</td>
 
             </tr>
         </table>
@@ -65,8 +70,8 @@
             </tr>
             <tr>
                 <td>
-                    <img id="verdadeiro" style="margin-left: 2cm; margin-right: 2cm; " onclick="resposta(true);" class="buttom " src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\botao_verde.png "> <br>Verdadeiro</td>
-                <td><img id="falso " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " onclick="resposta(false);" src="C:\Users\lucas.couto\Documents\Projects\Dev-WEB\Decisions_If_Else\Imagens\botao_vermelho.png "><br> Falso</td>
+                    <img id="verdadeiro" style="margin-left: 2cm; margin-right: 2cm; " onclick="resposta(true);matematica()" class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_verde.png"> <br>Verdadeiro</td>
+                <td><img id="falso " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " onclick="resposta(false);matematica()" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_vermelho.png"><br> Falso</td>
             </tr>
         </table>
 
