Altered to IMC CALC

--- a/Teste_Events_JS/Index.html
+++ b/Teste_Events_JS/Index.html
@@ -13,29 +13,12 @@
 <body onload="Hello();">
     <header>
         <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
-        <p id="title" , style="cursor:default"> Menu de Testes
+        <p id="title" , style="cursor:default"> Calculadora IMC
     </header>
 
     <div class="Bloco">
 
-        <div class="content" id="OnclickEvents">
-            <p class="titulo">
-                <h2>Onclick Event </h2>
-            </p>
-            <p id="Happy">
-                <img id="Button" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRock();" TITLE="Deixar Feliz">
-                <img id="irock" class="irock" alt="Irock imagem" style="cursor:default" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
-            </p>
-            <p id="Sad">
-                <img id="Button" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRocksad();" TITLE="Deixar Triste">
-                <img id="irock2" class="irock" alt="Irock imagem" style="cursor:default" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" />
-            </p>
-
-            <p id="Reset">
-                <h3 style="padding-bottom: 0px;">Reset:</h3> <img id="Button" style="padding-top: 0px;" class="irock" alt="Click Buttom" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/Click_Button.png" , onclick="touchRockreset();" TITLE="Reset">
-            </p>
-
-        </div>
+        
 
         <div class="content" id="IMCCALC">
             <div class="form">
