--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<head >
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,20 +11,19 @@
     </script>
 </head>
 
-<body onload="Hello();resizeRock();" onresize="resizeRock();">
-    <img id="logo" alt="Lucky's Logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png">
+<body onload="Hello();">
+    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png";>
 
     <header>
 
         <p>Quiz - iRock</p>
     </header>
+
     <div id="placar">
-        <h1 style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"> </h1>    </div>
+        <p id ="linhaplacar" style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"> </p>    
+    </div>
 
     <div id="main">
-        <p>
-            <h1 id="clique" style="text-align: center; color: white; display: ;" >Para começar clique em mim!</h1>
-        </p>
         <img id="iRock" alt="Irock imagem" style="cursor:pointer" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Projeto_IRock/Imagem/irock.png" , onclick="touchRock();" , />
     </div>
     <br>
@@ -70,8 +69,8 @@
             </tr>
             <tr>
                 <td>
-                    <img id="verdadeiro" style="margin-left: 2cm; margin-right: 2cm; " onclick="resposta(true);matematica()" class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_verde.png"> <br>Verdadeiro</td>
-                <td><img id="falso " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " onclick="resposta(false);matematica()" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_vermelho.png"><br> Falso</td>
+                    <img id="verdadeiro" style="margin-left: 2cm; margin-right: 2cm; " onclick="resposta(1);matematica()" class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_verde.png"> <br>Verdadeiro</td>
+                <td><img id="falso " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " onclick="resposta(2);matematica()" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_vermelho.png"><br> Falso</td>
             </tr>
         </table>
 
