--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body onload="Hello();">
-    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Teste_Events_JS/Image/White_Logo.png";>
+    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png";>
 
     <header>
 
-        <p>Quiz - iRock</p>
+        <p style="font-size: xx-large; font-weight: bolder;";>Quiz - iRock</p>
     </header>
 
     <div id="placar">
-        <p id ="linhaplacar" style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;" id="ponto"> </p>    
+        <p id ="linhaplacar" style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size: xx-large;"> </p>    
     </div>
 
     <div id="main">
