--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head >
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,15 +12,15 @@
 </head>
 
 <body onload="Hello();">
-    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png";>
+    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png" ;>
 
     <header>
 
-        <p style="font-size: xx-large; font-weight: bolder;";>Quiz - iRock</p>
+        <p style="font-size: xx-large; font-weight: bolder;" ;>Quiz - iRock</p>
     </header>
 
     <div id="placar">
-        <p id ="linhaplacar" style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size: xx-large;"> </p>    
+        <p id="linhaplacar" style="display:'none'; color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-size: xx-large;"> </p>
     </div>
 
     <div id="main">
@@ -45,37 +45,45 @@
 
             <tr>
                 <td>
-                    <img id="mat" style="margin-left: 2cm; margin-right: 2cm;" " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria(); matematica(); ">
+                    <img id="mat" style="margin-left: 2cm; margin-right: 2cm;" " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png " onclick="selacaoMateria();matematica() ">
                      <br>Matematica</td>
-                <td><img id="pt " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png"onclick="selacaoMateria(); portugues() "><br>Portugues</td>
+                <td><img id="pt " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png "onclick="selacaoMateria(); portugues() "><br>Portugues</td>
                
             </tr>
 
-            <tr> <td>
-                    <img id="geo " style="margin-left: 2cm; margin-right: 2cm; " " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();geografia()"> <br>Geografia</td>
-                <td><img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();"><br>Ciência</td>
+            <tr>
+                <td>
+                    <img id="geo " style="margin-left: 2cm; margin-right: 2cm; " " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();geografia()"><br>Geografia
+                </td>
+                <td>
+                    <img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();"><br>Ciência
+                </td>
 
             </tr>
         </table>
 
         <table class="questionario" id="questionario" style="display: none; ">
-            <!-- "Display: none " faz com que permaneça escondida mesmo que ainda existente -->
+
 
             <tr id="SessaoPergunta ">
                 <td id="NumeroPergunta" colspan="2 " style="text-align: center;  font-size: x-large;"></td>
             </tr>
+
+
             <tr id="BlocoPergunta">
                 <td id="Pergunta" colspan="2 "></td>
             </tr>
+
+
             <tr id="botao" syle="display: ;">
-                <td>
-                    <img id="verdadeiro" style="margin-left: 2cm; margin-right: 2cm; " onclick="resposta(1);matematica();portugues();geografia();" class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_verde.png"> <br>Verdadeiro</td>
-                <td><img id="falso " style="margin-right: 2cm; margin-left: 2cm; " class="buttom " onclick="resposta(2);matematica();portugues();geografia();" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/botao_vermelho.png"><br> Falso</td>
+
             </tr>
+
+
             <tr id="botaoEnd">
                 <td colspan="2">
-                <img id="Home" style="margin-right: 2cm; margin-left: 2cm; display: none;" onclick="mostrarTabelaTemas(),Reset();" class="buttom " src="C:\Users\User\Documents\Projetos\Dev-WEB-1\Decisions_If_Else\Imagens\Home.png"><br></td>
-            </td>
+                    <img id="Home" style="margin-right: 2cm; margin-left: 2cm; display: none;" onclick="mostrarTabelaTemas(),Reset();" class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/Home.png"><br></td>
+                </td>
             </tr>
 
         </table>
