--- a/Decisions_If_Else/Index.html
+++ b/Decisions_If_Else/Index.html
@@ -56,7 +56,7 @@
                     <img id="geo " style="margin-left: 2cm; margin-right: 2cm; " " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();geografia()"><br>Geografia
                 </td>
                 <td>
-                    <img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();"><br>Ciência
+                    <img id="cie" style="margin-right: 2cm; margin-left: 2cm; " class="buttom " src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/Decisions_If_Else/Imagens/questao.png" onclick="selacaoMateria();ciencia();"><br>Ciência
                 </td>
 
             </tr>
