--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -1,4 +1,3 @@
-\
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -13,7 +12,8 @@
 </head>
 
 <body>
-
+    <header></header>
+    test
 </body>
 
 </html>
