--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cine Max - Reservas</title>
     <script type="text/javascript" src="cine.js"></script>
-    <link type="text/css" src="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
 </head>
 
 <body>
-    <header></header>
-    test
+    <header>Cine Max - Reserva de Lugares</header>
+
 </body>
 
 </html>
