--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -12,8 +12,25 @@
 </head>
 
 <body>
-    <header>Cine Max - Reserva de Lugares</header>
+    <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png" ;>
 
+    <header>Biblioteca Conciliadora</header>
+
+    <div></div>
+    <div id="main">
+        <nav>
+            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Cadastro de Reserva</p>
+            <div id="form">text</div>
+        </nav>
+        <section id="reserva">
+            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Títulos de Livros</p>
+            <div id="Cadeiras">
+                Testp
+            </div>
+
+        </section>
+    </div>
+    <footer></footer>
 </body>
 
 </html>
