Cadastro Camp created

--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -14,18 +14,44 @@
 <body>
     <img id="logo" src="https://raw.githubusercontent.com/lucasadriano97/Dev-WEB/main/IMC_Calc/Image/White_Logo.png" ;>
 
-    <header>Biblioteca Conciliadora</header>
+    <header>Cine Max</header>
 
     <div></div>
-    <div id="main">
+    <div id="main" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
         <nav>
-            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Cadastro de Reserva</p>
-            <div id="form">text</div>
+            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">Cadastro</p>
+            <div id="form" style="font-size: 10; color:white;">
+                <table>
+                    <tr>
+                        <td>Nome: </td>
+                        <td class="td2"><input id="name" style="border-radius: 20px;width: 4.7cm;"></td>
+                    </tr>
+                    <tr>
+                        <td>Filme: </td>
+                        <td class="td2"><select name="filme" style="border-radius: 20px;width: 5cm;">                            
+                            <option value="0" style="border-radius: 20px;"></option>
+                            <option value="filme1">A Volta dos que não Foram</option>
+                            <option value="filme2"> As tranças da Vovó Careca</option>
+                            <option value="filme3">O Skate do Saci</option>
+                          </select></td>
+                    </tr>
+                    <tr>
+                        <td>Grupo: </td>
+                        <td class="td2"><select name="grupo" style="border-radius: 20px;width: 5cm;">                            
+                        <option value="0" style="border-radius: 20px;">- Qntd. de Pessoas</option>
+                        <option value="grupo2">2</option>
+                        <option value="grupo3">3</option>
+                        <option value="grupo4">4</option>
+                      </select></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><button id="check" type="button" Style="font-size:15px; margin-left: 37%; cursor: pointer;border-radius: 20px;">Verificar</td></tr>
+                </table>
+            </div>
         </nav>
         <section id="reserva">
-            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Títulos de Livros</p>
+            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Reserva de Lugares</p>
             <div id="Cadeiras">
-                Testp
             </div>
 
         </section>
