--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -19,7 +19,7 @@
     <div></div>
     <div id="main" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
         <nav>
-            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">Cadastro</p>
+            <p id="menuTitle" style="font-size: 20px;padding-bottom: 5px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; ">Cadastro</p>
             <div id="form" style="font-size: 10; color:white;">
                 <table>
                     <tr>
@@ -39,6 +39,7 @@
                         <td>Grupo: </td>
                         <td class="td2"><select name="grupo" style="border-radius: 20px;width: 5cm;">                            
                         <option value="0" style="border-radius: 20px;">- Qntd. de Pessoas</option>
+                        <option value="grupo1">1</option>
                         <option value="grupo2">2</option>
                         <option value="grupo3">3</option>
                         <option value="grupo4">4</option>
@@ -50,7 +51,7 @@
             </div>
         </nav>
         <section id="reserva">
-            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Reserva de Lugares</p>
+            <p id="menuTitle" style="font-size: 20px; border-radius: 20PX;text-align: center; margin: 3px; background-color: silver; padding-bottom: 5px; font-family: -apple-system, BlinkMaZcSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">Reserva de Lugares</p>
             <div id="Cadeiras">
             </div>
 
