--- a/Cine_Max/Index.html
+++ b/Cine_Max/Index.html
@@ -24,11 +24,11 @@
                 <table>
                     <tr>
                         <td>Nome: </td>
-                        <td class="td2"><input id="name" style="border-radius: 20px;width: 4.7cm;"></td>
+                        <td class="td2"><input id="name" style="border-radius: 20px;width: 130px;"></td>
                     </tr>
                     <tr>
                         <td>Filme: </td>
-                        <td class="td2"><select name="filme" style="border-radius: 20px;width: 5cm;">                            
+                        <td class="td2"><select name="filme" style="border-radius: 20px;;">                            
                             <option value="0" style="border-radius: 20px;"></option>
                             <option value="filme1">A Volta dos que não Foram</option>
                             <option value="filme2"> As tranças da Vovó Careca</option>
@@ -37,7 +37,7 @@
                     </tr>
                     <tr>
                         <td>Grupo: </td>
-                        <td class="td2"><select name="grupo" style="border-radius: 20px;width: 5cm;">                            
+                        <td class="td2"><select name="grupo" style="border-radius: 20px;;">                            
                         <option value="0" style="border-radius: 20px;">- Qntd. de Pessoas</option>
                         <option value="grupo1">1</option>
                         <option value="grupo2">2</option>
